# whichcat

./: .env.example  .gitignore  GEMINI.md  README.md  justfile  pyproject.toml
scripts/: label_ui.py  live_viewer.py  test_rtsp.py
src/common/: config.py  logging.py
src/data_collection/: extractor.py  flow.py
src/inference/: live_tracker.py
src/training/: dataset.py  model.py
